Some scripts were added and the page create new sig's interface were created.

--- a/pages/create_new_sig.html
+++ b/pages/create_new_sig.html
@@ -11,11 +11,11 @@
     <!-- The functions called by 'nodeTemplate' e 'linkTemplate', is inside 'commomFunctions.js'
          I did that to reuse of code. -->
     <script src="../js/commomFunctions.js"></script>
-    <script src="../js/newSIG.js""></script>
+    <script src="../js/newSIG.js"></script>
 
     <title>Create New SIG</title>
 </head>
-<body onload="init()"">
+<body onload="init()">
 
     <div id= "myDiagramSIG" style="background-color: white; border: solid 0.3px black; width: 80%; height: 550px; margin-left: 150px;">
     </div>
