--- a/pages/catalogs.html
+++ b/pages/catalogs.html
@@ -32,6 +32,12 @@
                   </ul>
                 </div>
               </nav>
+
+              <div class="input-field">
+                <input id="search" type="search" required>
+                <label class="label-icon" for="search"><i class="material-icons">search</i></label>
+                <i class="material-icons">close</i>
+              </div>
         <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
         <!-- Compiled and minified JavaScript -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
