Page 'Procurar Catálogos' was added and is getting catalogs of backend already.

--- a/index.html
+++ b/index.html
@@ -3,34 +3,43 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Family Tree (British)</title>
+  <title>SIGFinder - Home</title>
   <meta name="description" content="A family tree diagram of British royalty." />
-  <!-- Copyright 1998-2018 by Northwoods Software Corporation. -->
+
   <meta charset="UTF-8">
-  <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700' rel='stylesheet' type='text/css'>
-  <!-- Copyright 1998-2018 by Northwoods Software Corporation. -->
-  <script src="js/go.js"></script>
-  <script src="js/catalog.js"></script>
-  <!-- The functions called by 'nodeTemplate' e 'linkTemplate', is inside 'commomFunctions.js'
-         I did that to reuse of code. -->
-  <script src="js/commomFunctions.js"></script>
-  <script src="js/index.js"></script>
-  
+
+  <!--Import Google Icon Font-->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+  <!-- Compiled and minified CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+
+  <link rel="stylesheet" href="css/index.css">
+
 </head>
 
-<body onload="init()">
-  <div id="sample">
-    <div id="myDiagramDiv" style="background-color: white; border: solid 0.3px black; width: 80%; height: 550px; margin-left: 150px;"></div>
-    <p>
-      <button id="zoomToFit">Zoom to Fit</button>
-      <button id="centerRoot">Center on root</button>
-    </p>
+<body>
 
-    <a href="create_new_sig.html">Criar novo SIG</a>
-    
+    <nav>
+        <div class="nav-wrapper indigo darken-1">
+            <a href="/index.html" class="brand-logo center">SIGFinder</a>
+            <ul id="nav-mobile" class="left hide-on-med-and-down">               
+            </ul>
+        </div>
+    </nav>
+
+  <div class = "container">
+    <a href="pages/catalogs.html" class="waves-effect waves-light blue btn btnsHome">Procurar Catálogos</a>
+    <a href="pages/new_sig.html" class="waves-effect waves-light green btn btnsHome">Criar Catálogo</a>
   </div>
 
-  
+  <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
+  <!-- Compiled and minified JavaScript -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+
+  <script>
+    $('.sidenav').sidenav();
+  </script>
 </body>
 
 </html>
