--- a/pages/new_sig.html
+++ b/pages/new_sig.html
@@ -156,12 +156,12 @@
 
                     <div class="input-field col s12">
                         <div id="chips_applicationDomain_catalog" class="chips validate" required=""></div>
-                        <label for="chips_applicationDomain_catalog">Domínio de Aplicação * (pode ser vários)</label>
+                        <label for="chips_applicationDomain_catalog">Domínio de Aplicação * (pressione "ENTER" para cada domínio)</label>
                     </div>
 
                     <div class="input-field col s12">
                         <div id="chips_area_catalog" class="chips validate" required=""></div>
-                        <label for="chips_area_catalog">Area * (pode ser vários)</label>
+                        <label for="chips_area_catalog">Area * (pressione "ENTER" para cada area)</label>
                     </div>
 
                     <div class="input-field col s12">
